# shinylims

./: .env.example  .gitignore  LICENSE  README.md  app.py  data_utils.py  deploy_mode.yaml  manifest.json  mod_projects.py  pyproject.toml  requirements.txt  shared.py  styles.css  ui_pages.py  ui_server.py
.github/workflows/: deploy.yml  test.yml
data/archive/: prepare_historical_data.py  wgs_historical.csv
docs/: be392a2bbb1715066fc7e2732553dc5ce5cb8875-risk_matrix.md
scripts/: clarity_debug.py  debug_clarity_sequencing_lineage.py  pin_legacy_excel_archives.py
src/shinylims/: __init__.py  _brand.yml  app.py  data_utils.py  security.py  test_clarity_api.py  ui_server.py
src/shinylims/assets/: brand.yml  styles.css
src/shinylims/config/: __init__.py  index_plate_maps.py  reagents.py
src/shinylims/data/: brand_utils.py  data_utils.py  db_utils.py  lims_api.py
src/shinylims/features/: index_plate_maps.py  lab_tools.py  metadata_tables.py  projects.py  reagent_overview.py  samples.py  sequencing.py  storage.py
src/shinylims/helpers/: historical_samples.db  nird_transfer.py  prepare_historical_data.py  runme.py  ssh_transport.py  upload_atlas_file_to_saga.py  upload_files_to_nird.py
src/shinylims/integrations/: README.md  __init__.py  clarity_debug.py  clarity_models.py  clarity_pg.py  clarity_queries.py  data_utils.py  db_utils.py  lims_api.py  upload_atlas_file_to_saga.py
tests/: test_clarity_pg.py  test_data_utils.py  test_db_utils.py  test_index_plate_maps.py  test_queries.py  test_reagents_domain.py  test_samples.py  test_upload_atlas_file_to_saga.py
(+18 files in other folders)
