[project]
name = "shinylims-uv"
version = "0.2.3"
authors = [
  { name="Magnus Leithaug", email="magnus.leithaug@vetinst.no" },
]

description = "A shiny app to display lab metadata from clarity LIMS"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "faicons==0.2.2",
    "itables==2.2.5",
    "pandas==2.2.2",
    "pins==0.8.5",
    "python-dotenv>=1.0.1",
    "seaborn==0.13.2",
    "shiny[theme]==1.3.0",
    "brand-yml==0.1.1",
    "shinyswatch==0.6.1",
    "plotly==6.0.1",
    "shinywidgets==0.5.1",
    "tomli==2.2.1"

]

[tool.hatch.build.targets.wheel]
packages = ["src/shinylims"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
